--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jkelln13.github.io/comp-4513-asg1",
+  "homepage": "http://jkelln13.github.io/",
   "name": "comp-4513-asg1",
   "version": "0.1.0",
   "private": true,
